--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <div class="col-md-4">
                         <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg" 
                         alt="Jorge Bem Jor e o Trio Mocotó no Teatro da lagoa em 1971, são quatro homens cantano intrumentos em um palco"
+                        title="Jorge e ben Jor e o Trio Mocotó - CCO Domínio Publico / Acervo Nacional"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
