--- a/index.html
+++ b/index.html
@@ -23,18 +23,21 @@
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
             <div id="acessibilidade" class="menu-acessibilidade">
-                <button id="aumentar-fonte" class="btn btn-primary fw-bold" ><A+/button>
-                    <button id="aumentar-fonte" class="btn btn-primary fw-bold" ><A+/button></A>
-                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao"
-                    aria-expanded="false">acessibilidade</button>
-                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
-                    <button id="aumentar-fonte" class="btn btn-primary fw-bold"
-                        aria-label="Aumentar o tamanho da fonte">A+</button>
-                    <button id="diminuir-fonte" class="btn btn-primary fw-bold"
-                        aria-label="diminuir o tamanho da fonte">A-</button>
-                    <button id="alterna-contraste" class="btn btn-primary fw-bold"
-                        aria-label="Alterna o contraste de cores"> <i class="bi bi-shadows"></i></button>
-                </div>
+                <button id="aumentar-fonte" class="btn btn-primary fw-bold">
+                    <A+ /button>
+                        <button id="aumentar-fonte" class="btn btn-primary fw-bold">
+                            <A+ /button></A>
+                                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao"
+                                    aria-expanded="false">acessibilidade</button>
+                                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
+                                    <button id="aumentar-fonte" class="btn btn-primary fw-bold"
+                                        aria-label="Aumentar o tamanho da fonte">A+</button>
+                                    <button id="diminuir-fonte" class="btn btn-primary fw-bold"
+                                        aria-label="diminuir o tamanho da fonte">A-</button>
+                                    <button id="alterna-contraste" class="btn btn-primary fw-bold"
+                                        aria-label="Alterna o contraste de cores"> <i
+                                            class="bi bi-shadows"></i></button>
+                                </div>
             </div>
         </nav>
 
@@ -82,9 +85,9 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg" 
-                        alt="Jorge Bem Jor e o Trio Mocotó no Teatro da lagoa em 1971, são quatro homens cantano intrumentos em um palco"
-                        title="Jorge e ben Jor e o Trio Mocotó - CCO Domínio Publico / Acervo Nacional"
+                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
+                            alt="Jorge Bem Jor e o Trio Mocotó no Teatro da lagoa em 1971, são quatro homens cantano intrumentos em um palco"
+                            title="Jorge e ben Jor e o Trio Mocotó - CCO Domínio Publico / Acervo Nacional"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
