--- a/index.html
+++ b/index.html
@@ -16,28 +16,21 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+            <img src="img/logo.png" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
+
             <div id="acessibilidade" class="menu-acessibilidade">
-                <button id="aumentar-fonte" class="btn btn-primary fw-bold">
-                    <A+ /button>
-                        <button id="aumentar-fonte" class="btn btn-primary fw-bold">
-                            <A+ /button></A>
-                                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao"
-                                    aria-expanded="false">acessibilidade</button>
-                                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
-                                    <button id="aumentar-fonte" class="btn btn-primary fw-bold"
-                                        aria-label="Aumentar o tamanho da fonte">A+</button>
-                                    <button id="diminuir-fonte" class="btn btn-primary fw-bold"
-                                        aria-label="diminuir o tamanho da fonte">A-</button>
-                                    <button id="alterna-contraste" class="btn btn-primary fw-bold"
-                                        aria-label="Alterna o contraste de cores"> <i
-                                            class="bi bi-shadows"></i></button>
-                                </div>
+
+                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresent-lista">
+                    <button id="botao-acessibilidade" class="btn btn-primary fw bold rotacao-botao">Acessibilidade</button>
+
+                    <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
+                    <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button </div>
+                </div>
             </div>
         </nav>
 
@@ -50,23 +43,25 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563" height="278" loading="lazy">
+                    <img src="img/logo-2.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
+                        height="278" loading="lazy">
                     <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
                 <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png"
-                    alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone"
-                    title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid"
-                    class=img-inicio">
-
+                    alt="A imagem representa o grupo musical Os Mutantes. São trễs pessoas cantando em dois microfones"
+                    title="Os Mutantes - CCO Domíminio Público / Acervo Arquivo Nacional" class="img-fluid"
+                    class="img-inicio">
             </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0"
-            aria-label="Seção explicativa sobre a tropicália">
+        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
-                <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
+                <div class="col-4 d-flex justify-content-center">
+                    <img src="img/image (1).png" class="rounded-pill"
+                        alt="Logotipo do movimento Tropicália, apresentando uma diversidade de etnias e cores vibrantes"
+                        title="Arquivo disponibilizado pelos programadores da Alura" width="273" height="331"
+                        loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
@@ -74,35 +69,43 @@
                         brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
                         abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
                         teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda Matéria</p>
                 </div>
             </div>
         </section>
 
-        <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
+        <section id="galeria">
             <h2 class="text-center pt-5">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
                         <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
-                            alt="Jorge Bem Jor e o Trio Mocotó no Teatro da lagoa em 1971, são quatro homens cantano intrumentos em um palco"
-                            title="Jorge e ben Jor e o Trio Mocotó - CCO Domínio Publico / Acervo Nacional"
+                            alt="Jorge Ben Jor e o Trio Mocotó no Teatro da Lagoa em 1971, são quatro homens cantando e tocando instrumentos musicais em um palco."
+                            title="Jorge Ben Jor e o Trio Mocotó - CCO Domínio Público / Acervo Nacional"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                            alt="Os Mutantes 2, um grupo musical composto por dois homens e uma mulher cantando e tocando instrumentos musicas em um palco."
+                            title="Os Mutantes - CCO Dominio Público / Acervo Nacional" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
-                <div class="row mt-4  justify-content-md-center">
+
+                <div class="row mt-4 justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg"
+                            alt="Gilberto Gil nos anos 1960, em um palco cantando com os braços abertos segurando um violão na mão esquerda."
+                            title="Gilberto Gil - CCO Dominio Público / Acervo Nacional" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
+                            class="img-fluid rounded-5"
+                            alt="Caetano Veloso no III festival de Música Popular, cantando em um palco de braços abertos"
+                            title="Caetano Veloso- CCO Dominio Público / Acervo Nacional" class="img-fluid rounded-5"
+                            loading="lazy">
                     </div>
                 </div>
             </div>
@@ -129,7 +132,7 @@
                                 placeholder="Escreva sua mensagem"></textarea>
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">Enviar
+                            <button type="submit" class="btn btn-primary btn-lg rounded-pill tamanho-botao">Enviar
                                 mensagem</button>
                         </div>
                     </form>
@@ -144,7 +147,6 @@
         <i class="bi bi-tiktok"></i>
         <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
 
 </body>
